:bug: remove auth decorator
